- Fixes Unicode Collation
  * Now checks for and uses Unicode Collation Protocol instances that support English
  * Previously simply selected the first instance found (Inherited)
  * This should allow proper support for languages using unicode text
- Improves `TransientBoot` Feature
  * Now removes pre-existing `PreviousBoot` instances when booting with this option set
- Improves `HandleSignedInt` Function
  * Removed limitation on handled values
- Improves `DirectBoot` Feature
  * Minimises screen shudder when the `ESC` key is held down to override DirectBoot
- Improves `ScreenShot` Feature
  * Properly limited to one (1) sreenshot per keypress
    - Removes limitation of the keypress not continuing beyond the on-screen message display
  * Fixes Screenshots being only functional for the main RefindPlus screen
    - This bug was introduced in v0.13.2.AN (Commit 99da7ce)
- Improves `ProtectNVRAM` Feature
  * Now clears existing instances of blocked variables
  * Adds `UnlockID` and `UnlockIDCopy` to filtered items
    - These are not certificates but work in concert with the certificates
    - Hence, not required once certificates are filtered and additionally, filtering these reduces NVRAM writes
- Improves Identification of Linux Instances
  * `vmlinuz`, `bzImage`, and `kernel` loaders are now accounted for as Linux loaders
  * The `ProtectNVRAM` feature is now not applied to such loaders
  * The `grub` loader was already accounted for
- Improves OS Boot Filtering
  * The `OSType` flag is now taken into account
- Improves Load Error/Warning Display
  * The `ContinueOnWarning` feature is forced on temporarily if required
- Removes `BootKicker` feature
  * The feature was added as part of attempts to provide the RefindPlus screen on MacPro5,1
  * This was ultimately achieved via other means but the feature was maintained for potential benefits
  * The feature never actually worked properly however, hence the removal